# MCI-GRU

./: .env.example  .gitignore  2410.20679v3.txt  AGENTS.md  BACKTEST_FAIRNESS_AUDIT.md  CLAUDE.md  COLAB_CELLS_UPDATED.md  CONFIG_FIXES_SUMMARY.md  FIXES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OUTPUT_MANAGEMENT.md  QUICK_REFERENCE.md  README.md  Scratch2.py  Seed_test (1).ipynb  TEST_RESULTS.md  build_historical_universe.py  build_sp500_dataset.py  download_all_universes.py  evaluate_sp500 copy.py  evaluate_sp500.py  fetch_script.py  fetch_sp500_constituents.py  mci_gru_implementation_plan.md  mci_gru_sp500.py  pyproject.toml  requirements.txt  run_experiment.py  run_sp500_colab.ipynb  run_sp500_simple.ipynb  run_temporal_experiments.py  scratch1.py  sp500 - batchsize 1 version.py  sp500 - batchsize 32 rolling window training.py  sp500.py  ssrn-3489539.txt  verify_baseline.py
.claude/: settings.local.json
Program explainers/: paper_trade_system_reference_1393a11f.plan.md
configs/: config.yaml
docs/: ABLATION_NOTEBOOK_RESULTS_REPORT_2026-04-30.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BACKTEST_FAIRNESS_AUDIT.md  CONFIGURATION_GUIDE.md  FULL_FEATURE_FACTORIAL_ABLATION.md  MLFLOW_TRACKING.md  MODERN_DEFAULTS_HANDOFF_2026.md  NOTEBOOK_BEST_PRACTICES.md  OUTPUT_MANAGEMENT.md  OUTPUT_PERSISTENCE_COMPLETE.md  QUICK_REFERENCE.md  REGIME_DATA_CONTRACT.md  index.md  mci_gru_implementation_plan.md
mci_gru/: __init__.py  config.py  pipeline.py  walkforward.py
notebooks/: ablation_evaluation_loop_colab.ipynb  colab_workflow.ipynb  dynamic_graph_methods_ablation_colab.ipynb  full_feature_factorial_ablation_colab.ipynb  mci_gru_sp500_colab.ipynb  promising_models_backtest_colab.ipynb  recommended_confirmation_ablation_colab.ipynb  rolling_temporal_backtest_colab.ipynb  train_test_backtest_workflow.ipynb  training_factor_ablation_colab.ipynb
references/: ssrn-2474755.txt
scripts/: analyze_temporal_consistency.py  baseline_mse.py  build_historical_universe.py  build_sp500_dataset.py  check_config.py  ci_smoke.py  colab_mcp_wrapper.py  colab_regime_reconcile.py  export_lseg_regime.py  fetch_script.py  gen_promising_backtest_nb.py  gen_temporal_rolling_backtest_nb.py  gen_train_test_nb.py  run_temporal_experiments.py  verify_baseline.py
tests/: backtest_sp500.py  backtest_sp500_daily.py  (+18 more)
(+183 files in other folders)
